# cmd-practice

./: .envrc  .gitignore  README.md  highscores.json  man_pages.json  pyproject.toml
cmd_practice_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
data/: avonturen.txt  duplicates.txt  sales_data.csv  sample1.txt  sample_doc.txt  search_me.txt  students.csv  to_be_deleted.txt  unsorted_list.txt  user_data.csv  user_profiles.txt  words_and_numbers.csv
data/my_docs/: alpha.doc  beta_notes.md  zeta_config.conf
data/project_files/: data.txt  main.py  old_script.py
data/temp_files/: cache.tmp
documentation/: implementation_plan.md
quant-practice/: IMPROVEMENT_PLAN.md  ROADMAP.md  STORE_LISTING.md  app.json  eas.json  package-lock.json  package.json
quant-practice/app/: _layout.tsx  drill.tsx  onboarding.tsx  paywall.tsx  settings.tsx
src/: evaluator.py  main.py  task_loader.py
tasks/: awk_conditional_sum_01.json  awk_extract_column_01.json  awk_sed_complex_transform_01.json  cut_first_column_01.json  find_delete_specific_type_01.json  find_files_01.json  find_move_list_01.json  find_specific_files_sorted_02.json  find_xargs_wc_01.json  grep_avonturen_01.json  grep_context_and_count_01.json  grep_wc_line_count_01.json  hard_fix_log_correlation_01.json  head_display_first_lines_01.json  ls_long_format_01.json  ls_sorted_reverse_01.json  ping_localhost_01.json  rm_safe_delete_01.json  sed_reformat_data_01.json  sed_replace_word_01.json  sort_alphabetical_01.json  tail_display_last_lines_01.json  uniq_remove_duplicates_01.json  wc_count_lines_01.json
(+28 files in other folders)
